# planar_geo

./: .gitignore  Cargo.toml  LICENSE  README.md  README.template.md  README_local.md  build.rs
docs/: links.md  main.md
docs/point_inside_contour/: intersection_valid.odg  point_inside_contour.md  ray_casting.odg  y-monotonic_arc.odg
docs/readme_parts/: end.md  intersection_composites.svg.md  intersection_segments.svg.md  links.md  shape.svg.md  type_overview.svg.md
examples/: arc_segments.rs  fillet_chain.rs  geometric_types.rs  grid_and_coordinate_system.rs  intersection_composites.rs  intersection_segments.rs  polygonizer_comparison.rs  shape.rs  touching.rs  type_overview.rs
src/: composite.rs  contour.rs  error.rs  geometry.rs  lib.rs  line.rs  polysegment.rs  prelude.rs  primitive.rs  segment_chain.rs  shape.rs
src/draw/: drawable.rs  geometry.rs  intersection.rs  mod.rs
src/segment/: arc_segment.rs  line_segment.rs  mod.rs
src/visualize/: imp.rs  intersection.rs  mod.rs
tests/: arc_segment.rs  arrow.rs  bounding_box.rs  contour.rs  line.rs  line_segment.rs  polysegment.rs  segment.rs  segment_chain.rs  shape.rs
tests/drawable/: arrows.rs  conversion.rs  drawable.rs  geometry_types.rs  grid_and_coordinate_system.rs  intersection.rs  main.rs  text_placement.rs
