[package]
name = "planar_geo"
version = "0.3.9"
edition = "2024"
description = "A Rust library for 2D geometry: geometric objects, algorithms and visualization"
readme = "README.md"
license  = "MIT OR Apache-2.0"
repository = "https://github.com/StefanMathis/planar_geo.git"

[dependencies]
cairo-rs = {version = "0.21", optional = true}
bounding_box = { version = "0.4.1", features = ["approx"]}
rayon = "1.5"
num = "0.4.0"
ordered-float = "^3.6.0"
serde = { version = "1", features = ["derive"], optional = true }
deserialize_untagged_verbose_error = { version = "^0.1.5", optional = true }
geometry-predicates = "0.3"
approx = { package = "approxim", version = "0.6", features = ["array_impl"] }
compare_variables = { version = "^0.2.0" }
embed-doc-image = { version = "^0.1.4", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:deserialize_untagged_verbose_error", "bounding_box/serde"]
cairo = ["dep:cairo-rs"]
doc-images = ["dep:embed-doc-image"]

[dev-dependencies]
cairo_viewport = { version = "^0.2.2", features = ["image-compare"] }
planar_geo = { path = ".", features = ["serde", "cairo"] }

[package.metadata.docs.rs]
features = ["serde", "cairo", "doc-images"]
rustdoc-args = ["--cfg", "docsrs"]